--- a/70_pf/dothome/haeundae copy/index copy.html
+++ b/70_pf/dothome/haeundae copy/index copy.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>해운대 빛축제</title>
     <link rel="stylesheet" href="css/style copy.css">
-    <script src="./script/jquery-1.12.4.js"></script>
-    <script src="./script/script copy.js"></script>
+    <script src="script/jquery-1.12.4.js"></script>
+    <script src="script/script copy.js"></script>
 </head>
 
 <body>
@@ -16,32 +16,32 @@
             <h1 class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></h1>
             <nav>
                 <ul class="main">
-                    <li><a href="#">메인메뉴1</a>
+                    <li><a href="#">축제소개</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">환영인사</a></li>
+                            <li><a href="#">축제개요</a></li>
+                            <li><a href="#">오시는길안내</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메인메뉴2</a>
+                    <li><a href="#">축제정보</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">축제장배치도</a></li>
+                            <li><a href="#">축제일정표</a></li>
+                            <li><a href="#">이벤트</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메인메뉴3</a>
+                    <li><a href="#">자료마당</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">보도자료</a></li>
+                            <li><a href="#">자료실</a></li>
+                            <li><a href="#">포토갤러리</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">메인메뉴4</a>
+                    <li><a href="#">열린마당</a>
                         <ul class="sub">
-                            <li><a href="#">서브메뉴1</a></li>
-                            <li><a href="#">서브메뉴2</a></li>
-                            <li><a href="#">서브메뉴3</a></li>
+                            <li><a href="#">알림글</a></li>
+                            <li><a href="#">자주묻는질문</a></li>
+                            <li><a href="#">문의사항안내</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -50,10 +50,9 @@
         <div class="container">
             <div class="slide">
                 <ul>
-                    <li> <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a></li>
-                    <li> <a href="#"><img src="images/slide2.png" alt="슬라이드2"></a></li>
-                    <li> <a href="#"><img src="images/slide3.png" alt="슬라이드3"></a></li>
-                    <li> <a href="#"><img src="images/slide1.png" alt="슬라이드1"></a></li>
+                    <li><a href="#"><img src="images/slide1.png" alt="이미지1"></a></li>
+                    <li><a href="#"><img src="images/slide2.png" alt="이미지2"></a></li>
+                    <li><a href="#"><img src="images/slide3.png" alt="이미지3"></a></li>
                 </ul>
             </div>
             <div class="contents">
@@ -62,17 +61,14 @@
                         <a href="#" class="active">공지사항</a>
                         <a href="#">갤러리</a>
                     </span>
-
-                    <!-- 공지사항 -->
                     <div id="notice" class="active">
                         <ul>
-                            <li><a href="#">빛축제 일정 안내</a><span>2024.12.01.</span></li>
-                            <li><a href="#">빛콘서트 출연진 안내</a><span>2024.12.10.</span></li>
-                            <li><a href="#">축제 점등식 취소 안내</a><span>2024.12.20.</span></li>
+                            <li><a href="#">빛축제 일정 안내 </a><span>2024.12.01.</span></li>
+                            <li><a href="#">빛콘서트 출연진 안내 </a><span>2024.12.10.</span></li>
+                            <li><a href="#">축제 점등식 취소 안내 </a><span>2024.12.20.</span></li>
                             <li><a href="#">불꽃드론ㆍ불꽃쇼 일정 안내</a><span>2024.12.28.</span></li>
                         </ul>
                     </div>
-                    <!-- 갤러리 -->
                     <div id="gallery">
                         <a href="#"><img src="images/gallery1.png" alt="갤러리1"></a>
                         <a href="#"><img src="images/gallery2.png" alt="갤러리2"></a>
@@ -83,16 +79,15 @@
                     <a href="#"><img src="images/banner.png" alt="배너"></a>
                 </div>
                 <div class="link">
-                    <a href="#"><img src="images/link.png" alt="링크"></a>
+                    <a href="#"><img src="images/link.png" alt="배너"></a>
                 </div>
             </div>
-
             <footer>
                 <div class="blogo">
                     <a href="#"><img src="images/blogo.png" alt="흑백로고"></a>
                 </div>
-                <div class="txt">
-                    <div class="btxt">
+                <div class="bottom_menu">
+                    <div class="bmenu">
                         <ul>
                             <li><a href="#">전화번호안내</a></li>
                             <li><a href="#">개인정보처리방침</a></li>
@@ -101,11 +96,20 @@
                         </ul>
                     </div>
                     <div class="copy">
-                        <p>48095 부산광역시 해운대구 중동2로 11(중동) 대표전화 : (051)749-4000 팩스 : (051)749-4444</p>
-                        <p>Copyright© 2019 Haeundae-gu. All rights reserved.</p>
+                        <p>48095 부산광역시 해운대구 중동2로 11(중동) 대표전화 : (051)749-4000 팩스 : (051)749-4444
+                        </p>
+                        <p>Copyright© 2019 Haeundae-gu. All rights reserved.
+                        </p>
                     </div>
                 </div>
             </footer>
+        </div>
+    </div>
+    <div class="modal">
+        <div class="popup">
+            <h2>lorem ipsum</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus rem, ipsum iste distinctio at ea tempore qui laudantium quis ex animi veritatis similique ullam accusantium facere cupiditate iusto odio omnis.</p>
+            <div class="button"><button>&times; 닫기</button></div>
         </div>
     </div>
 </body>
