--- a/70_pf/dothome/haeundae copy/index.html
+++ b/70_pf/dothome/haeundae copy/index.html
@@ -63,8 +63,8 @@
                 <!-- 탭메뉴:공지사항/갤러리 -->
                 <div class="tabs">
                     <span class="btn">
-                        <a href="#tab1" class="active">공지사항</a>
-                        <a href="#tab2">갤러리</a>
+                        <a href="#" class="active">공지사항</a>
+                        <a href="#">갤러리</a>
                     </span>
 
                     <!-- 공지사항 -->
@@ -128,7 +128,7 @@
                     주요내용 : 눈빛정원, 반응형 씰링, 미디어아트, 체험프로그램, 빛놀이터 등 <br>
                     주최 주관 : 해운대구
                 </p>
-                <div><a href="#">&times; 닫기</a></div>
+                <div class="button"><button>&times; 닫기</button></div>
             </div>
         </div>
     </div><!-- .wrap end -->
