--- a/70_pf/dothome/bluebottle/index.html
+++ b/70_pf/dothome/bluebottle/index.html
@@ -72,7 +72,7 @@
             <div class="notice">
                 <h2>공지사항</h2>
                 <ul>
-                    <li><a href="#">부산 기장 카페 오픈</a><span>2025.04.30</span></li>
+                    <li><a href="#" id="#open-layer">부산 기장 카페 오픈</a><span>2025.04.30</span></li>
                     <li><a href="#">마리메꼬 x 블루보틀</a><span>2025.04.15</span></li>
                     <li><a href="#">설 연휴 영업 시간 안내</a><span>2025.01.01</span></li>
                     <li><a href="#">부산 민락 카페 오픈</a><span>2024.11.15</span></li>
@@ -130,15 +130,14 @@
             </div><!-- .sns_fs end -->
         </div>
     </footer>
-    <div class="modal">
-        <div class="popup">
-            <h2>콜시츠키와 최초의 블루보틀</h2>
-            <p>1600년대 말, 중부 및 동부 유럽의 대부분을 점령하고 있던 터키군은 1683년 비엔나에 도착했습니다. 군에 포위되어 절망적인 상황에 놓인 비엔나 사람들은 터키 군의 포위망을 뚫고 인근에
-                주둔해 있는 폴란드 군대에게 자신들의 메시지를 전해줄 특사가 필요했습니다. 이때, 터키어와 아랍어에 능통한 프란츠 조지 콜시츠키(Franz George Kolshitsky)가 터키군으로
-                위장하여 이 일을 수행하기로 합니다. 위험천만한 위기의 순간을 여러 번 넘긴 후 마침내 콜시츠키는 모든 임무를 용맹하게 완수해내고, 곧 다가올 폴란드의 지원 소식을 비엔나에 다시 전하게
-                됩니다.</p>
-            <div class="button"><button type="button">&times; 닫기</button></div>
-        </div>
+    <div id="modal-overlay"></div>
+    <div id="modal-popup">
+        <h2>콜시츠키와 최초의 블루보틀</h2>
+        <p>1600년대 말, 중부 및 동부 유럽의 대부분을 점령하고 있던 터키군은 1683년 비엔나에 도착했습니다. 군에 포위되어 절망적인 상황에 놓인 비엔나 사람들은 터키 군의 포위망을 뚫고 인근에
+            주둔해 있는 폴란드 군대에게 자신들의 메시지를 전해줄 특사가 필요했습니다. 이때, 터키어와 아랍어에 능통한 프란츠 조지 콜시츠키(Franz George Kolshitsky)가 터키군으로
+            위장하여 이 일을 수행하기로 합니다. 위험천만한 위기의 순간을 여러 번 넘긴 후 마침내 콜시츠키는 모든 임무를 용맹하게 완수해내고, 곧 다가올 폴란드의 지원 소식을 비엔나에 다시 전하게
+            됩니다.</p>
+        <div class="button"><button type="button" id="#close-modal">&times; 닫기</button></div>
     </div>
 </body>
 
