--- a/70_pf/dothome/daewooenc/index.html
+++ b/70_pf/dothome/daewooenc/index.html
@@ -66,12 +66,12 @@
             </ul>
         </div>
         <!-- 팝업창 -->
-        <div id="popup" class="popup">
-            <div class="popup_content">
-                <h3>개포 우성 7차 최상의 조건으로 수주 출사표</h3>
-                <p> 대우건설은 오는 6월 19일 입찰 마감을 앞두고 있는 개포 우성 7차 재건축 사업에 최근 내부 검토를 마치고 최상의 사업조건으로 참여하기로 출사표를 던졌다. 대우건설은 김보현 대표이사가 개포 우성 7차 재건축 사업의 입찰 과정 전반을 진두지휘하며 전사적인 역량을 총동원할 것이라며, “취임 이후 처음으로 하이엔드 브랜드인 써밋(SUMMIT)을 적용하는 만큼 최고의 주거명작을 선보이겠다”는 강력한 의지를 피력했다고 전했다. </p>
-                <div class="outer_btn"><a href="#" class="close_btn">&times 닫기</a></div>
-            </div>
+        <div id="popup">
+            <h2>개포 우성 7차 최상의 조건으로 수주 출사표</h2>
+            <p> 대우건설은 오는 6월 19일 입찰 마감을 앞두고 있는 개포 우성 7차 재건축 사업에 최근 내부 검토를 마치고 최상의 사업조건으로 참여하기로 출사표를 던졌다. 대우건설은 김보현 대표이사가
+                개포 우성 7차 재건축 사업의 입찰 과정 전반을 진두지휘하며 전사적인 역량을 총동원할 것이라며, “취임 이후 처음으로 하이엔드 브랜드인 써밋(SUMMIT)을 적용하는 만큼 최고의
+                주거명작을 선보이겠다”는 강력한 의지를 피력했다고 전했다. </p>
+            <div><button type="button">&times; 닫기</button></div>
         </div><!-- 팝업창 end -->
 
         <!-- C: contents -->
