--- a/05_html+cs+js/2-7/01_transform.html
+++ b/05_html+cs+js/2-7/01_transform.html
@@ -10,15 +10,58 @@
             3d - x, y, z
 
             transform(변형)
-                -이동       translate(x, y)     translateX() translateY()
-                                                translateZ()(앞뒤이동)
+                -이동       translate(x, y)     translateX() translateY() translateZ()(앞뒤이동)
                 -크기 조절  scale(w, h)         scaleX() scaleY()
                 -회전       rotate(deg)         rotateX() rotateY() Z는 일반rotate와 같다
                 -기울기     skew(deg, deg)      skewX() skewY()
         */
+        p {
+            width: 500px;
+            padding: 15px;
+            border: 5px solid rgba(0,0,0,0.5);
+            background: #87a;
+            font: 21px Times;
+        }
+
+        .t1 {
+            transform: translate(30px, 20px);
+        }
+
+        .t2 {
+            transform: rotate(500deg);
+        }
+
+        .t3 {
+            /* 너비 0.4로 줄이고, 높이는 1.3으로 늘린다 */
+            /* 1 아래로 내려가면 줄어듦 */
+            transform: scale(0.7, 1.3);
+        }
+
+        .t4 {
+            transform: skew(15deg, 10deg);
+        }
+        /* 
+            matrix (
+                scaleX
+                skewY,
+                skewX,
+                scaleY,
+                translateX,
+                translateY
+            )
+        */
+        .t5 {
+            transform: matrix(1, -0.1, 0, 1, 0, 0);
+        }
     </style>
 </head>
 <body>
+    <p>Original</p>
+    <p class="t1">translate(30px, 20px)</p>
+    <p class="t2">rotate(50deg)</p>
+    <p class="t3">scale(0.7, 1.3)</p>
+    <p class="t4">skew(15deg, 10deg)</p>
+    <p class="t5">matrix(1, -0.1, 0, 1, 0, 0)</p>
     
 </body>
 </html>
