--- a/70_pf/jeepcar/fullpage_jeep.html
+++ b/70_pf/jeepcar/fullpage_jeep.html
@@ -17,7 +17,14 @@
             overflow: hidden;
         }
 
+        body {
+            font-size: 15px/1.6 'Noto sans KR', sans-serif;
+            background: #fff;
+            color: #333;
+        }
+
         ul {
+            margin: 0;
             list-style: none;
         }
 
@@ -40,6 +47,20 @@
             height: 80px;
             text-align: center;
             background: #fff;
+        }
+
+        nav {
+            position: relative;
+        }
+
+        .main {
+            position: absolute;
+            top: 0;
+            left: 530px;
+            width: 910px;
+            display: flex;
+            justify-content: space-between;
+            line-height: 2;
         }
 
         /* 메인섹션 */
@@ -81,13 +102,15 @@
 
 <body>
     <header class="header">
-        <ul>
-            <li><a href="sub/">모델소개</a></li>
-            <li><a href="#">구입문의</a></li>
-            <li><a href="#"><img src="images/logo.png" alt="로고"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-        </ul>
+        <nav>
+            <ul class="main">
+                <li><a href="sub/">모델소개</a></li>
+                <li><a href="sub/">구입문의</a></li>
+                <li><a href="#"><img src="images/logo.png" alt="로고"></a></li>
+                <li><a href="sub/">고객지원</a></li>
+                <li><a href="sub/"><img src="images/jeepwave.png" alt="jeepwave"></a></li>
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <div class="section">Section 1</div>
