--- a/70_pf/haribo/fullpage.html
+++ b/70_pf/haribo/fullpage.html
@@ -34,7 +34,7 @@
         /* 스크롤 시 색상 변경 */
         .header.scrolled {
             transition: .3s;
-            background: #fff;
+            background: rgba(255, 255, 255, 0.5);
         }
 
         /* 콘텐츠 컨테이너: 헤더 높이 고려 */
