--- a/70_pf/SRT/index.html
+++ b/70_pf/SRT/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="script/script.css"></script>
+    <script src="script/script.js"></script>
 </head>
 
 <body>
     <header id="header">상단고정헤더</header>
 
+    <!-- 섹션 -->
     <div id="section2">
         <div class="section2_title">
             <h1><a href="#">추천여행상품</a></h1>
@@ -82,9 +83,9 @@
                     <p class="tour_way">&#91;홍익여행사&#93; 2박3일 &#183; 최소8인</p>
                 </div>
             </div>
-        </div>
+        </div><!-- //.tour_area -->
         <div class="tour_button"><button type="button">SRT 여행상품 더보기</button></div>
-    </div>
+    </div><!-- //.section -->
 </body>
 
 </html>
