--- a/70_pf/tourist copy/index.html
+++ b/70_pf/tourist copy/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
     <title>JEEP</title>
+    <link rel="stylesheet" href="test.css">
 </head>
+
 <body>
-    
+    <!-- 헤더 -->
+    <header id="header">
+        <div class="box_inner"></div>
+    </header>
+    <div id="container">
+        <!-- 섹션1 -->
+        <div class="main_rolling_pc"></div>
+        <!-- 섹션2 -->
+        <div class="about_area"></div>
+        <!-- 섹션3 -->
+        <div class="appbbs_area"></div>
+    </div>
+    <!-- 푸터 -->
+    <footer>
+        <div class="box_inner"></div>
+    </footer>
 </body>
+
 </html>
