--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -16,10 +16,13 @@
 
     <!-- 섹션 -->
     <div id="section2">
+        <!-- 타이틀 -->
         <div class="section2_title">
             <h1>추천여행상품</h1>
             <p>SRT와 함께할 수 있는 다양한 여행상품을 만나보세요.</p>
         </div>
+
+        <!-- 탭메뉴 버튼 -->
         <div class="tabs">
             <span class="tour_btn">
                 <a href="#" class="tab_btn active">SRT 베스트 여행상품</a>
@@ -28,16 +31,17 @@
                 <a href="#" class="tab_btn">1박2일 여행상품</a>
                 <a href="#" class="tab_btn">3박3일 여행상품</a>
             </span>
-        </div>
+        </div><!-- //.tabs -->
 
+        <!-- 슬라이드 화살표 버튼 -->
         <div class="arrow_left"><img src="images/arrow_left.svg" alt="왼쪽슬라이드버튼"></div>
         <div class="arrow_right"><img src="images/arrow_right.svg" alt="오른쪽슬라이드버튼"></div>
 
-
+        <!-- 캐로셀 컨텐츠 부분 -->
         <div class="tour_carousel_container active" id="content-0">
             <div class="tour_area">
                 <ul class="tour_carousel">
-                    <li class="tour_carousel_1">
+                    <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
@@ -52,7 +56,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_2">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -67,7 +71,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_3">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
@@ -82,7 +86,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_4">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -97,7 +101,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_5">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -112,7 +116,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_6">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -127,7 +131,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_7">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -148,7 +152,7 @@
         <div class="tour_carousel_container" id="content-1">
             <div class="tour_area">
                 <ul class="tour_carousel">
-                    <li class="tour_carousel_2">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -163,7 +167,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_1">
+                    <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
@@ -178,7 +182,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_4">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -193,7 +197,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_3">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
@@ -208,8 +212,7 @@
                             </div>
                         </div>
                     </li>
-
-                    <li class="tour_carousel_5">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -224,7 +227,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_6">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -239,7 +242,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_7">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -260,7 +263,7 @@
         <div class="tour_carousel_container" id="content-2">
             <div class="tour_area">
                 <ul class="tour_carousel">
-                    <li class="tour_carousel_4">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -275,7 +278,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_1">
+                    <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
@@ -290,7 +293,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_2">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -305,7 +308,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_3">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
@@ -320,7 +323,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_5">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -335,7 +338,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_6">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -350,7 +353,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_7">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -371,7 +374,7 @@
         <div class="tour_carousel_container" id="content-3">
             <div class="tour_area">
                 <ul class="tour_carousel">
-                    <li class="tour_carousel_1">
+                    <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
@@ -386,7 +389,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_2">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -401,7 +404,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_3">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
@@ -416,7 +419,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_4">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -431,7 +434,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_5">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -446,7 +449,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_6">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -461,7 +464,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_7">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -482,7 +485,7 @@
         <div class="tour_carousel_container" id="content-4">
             <div class="tour_area">
                 <ul class="tour_carousel">
-                    <li class="tour_carousel_1">
+                    <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
@@ -497,7 +500,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_2">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
@@ -512,7 +515,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_7">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -527,7 +530,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_3">
+                    <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
@@ -542,7 +545,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_4">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -557,7 +560,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_5">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -572,7 +575,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="tour_carousel_6">
+                    <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
@@ -591,8 +594,13 @@
                 </ul>
             </div><!-- //.tour_area -->
         </div>
-        <div class="tour_button"><a href="">SRT 여행상품 더보기</a></div>
-    </div><!-- //.section -->
+
+        <!-- 여행상품 더보기 -->
+        <div class="tour_button">
+            <a href="#">SRT 여행상품 더보기</a>
+        </div>
+
+    </div><!-- //#section2 -->
 </body>
 
 </html>
