--- a/70_pf/SRT/tour_best.html
+++ b/70_pf/SRT/tour_best.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/tour_best.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="script/script.js"></script>
+    <script src="script/script_best.js"></script>
 
 </head>
 
@@ -19,12 +19,38 @@
             <div class="header_line">서브타이틀영역</div>
         </div>
         <div class="best_container">
-            <div class="best_left">
-                <div class="remote"></div>
+            <div class="sidebar">
+                <div class="sidebar_contents"></div>
             </div>
-            <div class="best_right"></div>
+            <div class="best_right">
+                <div class="best_sub">
+                    <ul class="best_down">
+                        <li><a href="#">SRT 베스트 여행상품</a></li>
+                        <li><a href="#">지역별 여행상품</a></li>
+                        <li><a href="#">당일 여행상품</a></li>
+                        <li><a href="#">1박2일 여행상품</a></li>
+                        <li><a href="#">2박3일 여행상품</a></li>
+                    </ul>
+                </div>
+                <div class="best_sub_2">
+                    <div class="search_left">
+                        <p>검색결과 10</p>
+                    </div>
+                    <div class="search_right">
+                        <ul>
+                            <li><a href="#">추천순</a></li>
+                            <li><a href="#">가격 낮은 순</a></li>
+                            <li><a href="#">가격 높은 순</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="best_contents"></div>
+                <div class="best_tabs">
+                    <span class="best_btn"></span>
+                </div>
+            </div>
         </div>
-        <footer></footer>
+        <footer class="footer"></footer>
     </div>
 </body>
 
