--- a/70_pf/SRT/tour_best.html
+++ b/70_pf/SRT/tour_best.html
@@ -24,6 +24,12 @@
             </div>
             <div class="best_right">
                 <div class="best_sub">
+                    <h2 class="best_sub_title">
+                        <a href="#">
+                            SRT 베스트 여행상품
+                        </a>
+                        <a href="#"><span></span></a>
+                    </h2>
                     <ul class="best_down">
                         <li><a href="#">SRT 베스트 여행상품</a></li>
                         <li><a href="#">지역별 여행상품</a></li>
