--- a/70_pf/tourist copy/index.html
+++ b/70_pf/tourist copy/index.html
@@ -15,11 +15,11 @@
         <div class="box_inner"></div>
     </header>
     <div id="container">
-        <!-- 섹션1 -->
+        <!-- 섹션1 : pc 메인 롤링-->
         <div class="main_rolling_pc"></div>
-        <!-- 섹션2 -->
+        <!-- 섹션2 : 인기 여행지 -->
         <div class="about_area"></div>
-        <!-- 섹션3 -->
+        <!-- 섹션3 : 상담 및 최근게시물 -->
         <div class="appbbs_area"></div>
     </div>
     <!-- 푸터 -->
