--- a/70_pf/tourist copy/index.html
+++ b/70_pf/tourist copy/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-    <title>JEEP</title>
+    <title>tourlist</title>
     <!-- 제이쿼리 라이브러리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- bx슬라이더 라이브러리 jq -->
@@ -40,7 +40,30 @@
             </div>
         </div>
         <!-- 섹션2 : 인기 여행지 -->
-        <div class="about_area"></div>
+        <section class="about_area">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <ul>
+                <li>
+                    <img src="http://picsum.photos/id/100/340/340" alt="여행지1">
+                    <h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas.</p>
+                    <a href="#">view</a>
+                </li>
+                <li>
+                    <img src="http://picsum.photos/id/101/340/340" alt="여행지1">
+                    <h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas.</p>
+                    <a href="#">view</a>
+                </li>
+                <li>
+                    <img src="http://picsum.photos/id/102/340/340" alt="여행지1">
+                    <h3>Lorem, ipsum.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quas.</p>
+                    <a href="#">view</a>
+                </li>
+
+            </ul>
+        </section>
         <!-- 섹션3 : 상담 및 최근게시물 -->
         <div class="appbbs_area"></div>
     </div>
