--- a/70_pf/SRT/tour_best.html
+++ b/70_pf/SRT/tour_best.html
@@ -60,11 +60,11 @@
                     </div>
                     <div class="best_btn_area">
                         <div class="best_btn_page">
-                            <button type="button"><div class="arrow_pagebtnL"></div></button>
-                            <button type="button">1</button>
-                            <button type="button">2</button>
-                            <button type="button">3</button>
-                            <button type="button"><div class="arrow_pagebtnR"></div></button>
+                            <button type="button" id="prev_btn">◀</button>
+                            <button type="button" class="page_num" data-page="1">1</button>
+                            <button type="button" class="page_num" data-page="2">2</button>
+                            <button type="button" class="page_num" data-page="3">3</button>
+                            <button type="button" id="next_btn">▶</button>
                         </div>
                     </div>
                 </div>
