--- a/70_pf/jeep/fullpage_jeep.html
+++ b/70_pf/jeep/fullpage_jeep.html
@@ -4,100 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>jQuery 풀페이지_jeep</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/style_index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-
-        body {
-            font-size: 15px/1.6 'Noto sans KR', sans-serif;
-            background: #fff;
-            color: #333;
-        }
-
-        ul {
-            margin: 0;
-            list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-            color: #333;
-        }
-
-        img {
-            vertical-align: top;
-        }
-
-        /* 상단고정헤더 */
-        .header {
-            z-index: 9999;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 80px;
-            text-align: center;
-            background: #fff;
-        }
-
-        nav {
-            position: relative;
-        }
-
-        .main {
-            position: absolute;
-            top: 0;
-            left: 530px;
-            width: 910px;
-            display: flex;
-            justify-content: space-between;
-            line-height: 2;
-        }
-
-        /* 메인섹션 */
-        .section {
-            height: 100vh;
-            width: 100%;
-            text-align: center;
-            font-size: 3em;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: background 0.5s;
-        }
-
-        .section:nth-child(1) {
-            background: #3498db;
-        }
-
-        .section:nth-child(2) {
-            background: #e67e22;
-        }
-
-        .section:nth-child(3) {
-            background: #2ecc71;
-        }
-
-        .section:nth-child(4) {
-            background: #dbe730;
-        }
-
-        .footer {
-            height: 100vh;
-            width: 100%;
-            background: #555;
-        }
-    </style>
 </head>
 
 <body>
