--- a/05_html+cs+js/3-3/3-4-03_중지건너뛰기.html
+++ b/05_html+cs+js/3-3/3-4-03_중지건너뛰기.html
@@ -76,7 +76,7 @@
         for (let i = 1; i < 10; i++) {
             if (i % 3 === 0) {
                 num += i + ' ';
-                continue;
+                continue; // if조건이 true이면 아래 코드인 sum += i를 건너뛴다.
             }
             i++;
         }
