--- a/70_pf/SRT/tour_best.html
+++ b/70_pf/SRT/tour_best.html
@@ -20,7 +20,42 @@
         </div>
         <div class="best_container">
             <div class="sidebar">
-                <div class="sidebar_contents"></div>
+                <div class="sidebar_contents">
+                    <div class="sidebar_title">
+                        <h1>필터</h1>
+                        <button type="button">초기화</button>
+                    </div>
+                    <div class="sidebar_contents_area">
+                        <div class="search_container">
+                            <h2>종합검색</h2>
+                            <input type="text" class="search_box" placeholder="원하는 여행을 검색해보세요.">
+                            <button class="search_btn">
+                                <img src="images/search.svg" alt="검색버튼">
+                            </button>
+                        </div>
+                        <div class="item_container">
+                            <h2>상품상태</h2>
+
+                        </div>
+                        <div class="train_container">
+                            <h2>운행구간</h2>
+
+                        </div>
+                        <div class="during_container">
+                            <h2>여행기간</h2>
+
+                        </div>
+                        <div class="day_container">
+                            <h2>출발요일</h2>
+
+                        </div>
+                        <div class="key_container">
+                            <h2>키워드</h2>
+
+                        </div>
+                    </div><!-- sidebar_contents_area -->
+                    <div><h2>필터적용</h2></div>
+                </div><!-- sidebar_contents -->
             </div>
             <div class="best_right">
                 <div class="best_sub">
