--- a/70_pf/SRT/sub/tour_best.html
+++ b/70_pf/SRT/sub/tour_best.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SRT BEST 여행상품</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/tour_best.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/tour_best.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="script/script_best.js"></script>
+    <script src="../script/script_best.js"></script>
 
 </head>
 
@@ -30,7 +30,7 @@
                             <h2>종합검색</h2>
                             <input type="text" class="search_box" placeholder="원하는 여행을 검색해보세요.">
                             <button class="search_btn">
-                                <img src="images/search.svg" alt="검색버튼">
+                                <img src="../images/search.svg" alt="검색버튼">
                             </button>
                         </div>
                         <div class="item_container">
