--- a/70_pf/SRT/sub/sub.html
+++ b/70_pf/SRT/sub/sub.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>서브페이지</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/sub.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/sub.css">
 </head>
 <body>
     <!-- 헤더 -->
@@ -14,9 +14,9 @@
             <div class="first">
                 <div class="language">
                     <div class="lbtn" id="lbtn">
-                        <img src="./images/nav/language.png" alt="언어설정 아이콘">
+                        <img src="../images/nav/language.png" alt="언어설정 아이콘">
                         <p>Language</p>
-                        <img class="language_btn" src="./images/nav/language_btn.png" alt="아래화살표">
+                        <img class="language_btn" src="../images/nav/language_btn.png" alt="아래화살표">
                     </div>
                     <ul class="language_list" id="language_list">
                         <li><a href="#"> <span>KR</span> 한국어 </a></li>
@@ -26,13 +26,13 @@
                     </ul>
                 </div>
                 <div class="logo">
-                    <a href="#"><img src="./images/nav/logo.png" alt="상단로고"></a>
+                    <a href="#"><img src="../images/nav/logo.png" alt="상단로고"></a>
                 </div>
                 <div class="icons">
-                    <a href="#"><img src="./images/nav/login.png" alt="로그인 페이지 이동 아이콘"></a>
-                    <a href="#"><img src="./images/nav/guest.png" alt="회원가입 페이지 이동 아이콘"></a>
-                    <a href="#"><img src="./images/nav/Search.png" alt="검색 페이지 이동 아이콘"></a>
-                    <a href="#"><img src="./images/nav/hamburger_btn.png" alt="사이트맵 아이콘"></a>
+                    <a href="#"><img src="../images/nav/login.png" alt="로그인 페이지 이동 아이콘"></a>
+                    <a href="#"><img src="../images/nav/guest.png" alt="회원가입 페이지 이동 아이콘"></a>
+                    <a href="#"><img src="../images/nav/Search.png" alt="검색 페이지 이동 아이콘"></a>
+                    <a href="#"><img src="../images/nav/hamburger_btn.png" alt="사이트맵 아이콘"></a>
                 </div>
             </div>
         </div>
@@ -80,9 +80,9 @@
         </div>
         <div class="submenu_bar">
             <div class="sub_inner">
-                <a href="#" class="home"><img src="images/sub/home.png" alt="">홈</a>
-                <div class="menu"><a href="#">메인메뉴명<img src="images/sub/arrow-down.png" alt="화살표"></a></div>
-                <div class="menu"><a href="#">서브메뉴명<img src="images/sub/arrow-down.png" alt="화살표"></a></div>
+                <a href="#" class="home"><img src="../images/sub/home.png" alt="">홈</a>
+                <div class="menu"><a href="#">메인메뉴명<img src="../images/sub/arrow-down.png" alt="화살표"></a></div>
+                <div class="menu"><a href="#">서브메뉴명<img src="../images/sub/arrow-down.png" alt="화살표"></a></div>
             </div>
         </div>
     </section>
