--- a/70_pf/SRT/sub/cs.html
+++ b/70_pf/SRT/sub/cs.html
@@ -16,27 +16,74 @@
             <div class="header_line">서브타이틀영역</div>
         </div>
         <div class="cs_container">
-            <div class="cs_left">
-                <div class="cs_call">
-                    <div class="call_1"></div>
-                    <div class="call_2"></div>
-                </div>
-                <div class="cs_time">
-                    <div class="time_1"></div>
-                    <div class="time_2"></div>
-                </div>
-                <div class="cs_menu">
-                    <div class="menu_1"></div>
-                    <div class="menu_2"></div>
-                </div>
-                <div class="cs_men">
-                    <div class="men_1"></div>
-                    <div class="men_2"></div>
-                </div>
-            </div>
+            <ul class="cs_left">
+                <li class="cs_call">
+                    <div class="call_1">
+                        <h3>SR 고객센터</h3>
+                    </div>
+                    <div class="call_2">
+                        <p>1800-1412</p>
+                        <p>ARS(자동응답)서비스 / 상담원 연결 지원</p>
+                    </div>
+                </li>
+                <li class="cs_time">
+                    <div class="time_1">
+                        <h3>운영시간</h3>
+                    </div>
+                    <div class="time_2">
+                        <p>365일 연중무휴</p>
+                        <p>상담원 연결: 오전 9시 ~ 오후 9시</p>
+                    </div>
+                </li>
+                <li class="cs_menu">
+                    <div class="menu_1">
+                        <h3>메뉴구성</h3>
+                    </div>
+                    <div class="menu_2">
+                        <div class="ars">
+                            <p>ARS 안내</p>
+                            <div>
+                                <div class="n1">1</div>
+                                <p>승차권 환불 안내 : 승차권 구입 방법에 따른 환불 방법 안내</p>
+                            </div>
+                            <div>
+                                <div class="n1">2</div>
+                                <p>SRT 이용 안내 : 고객 센터로 자주 문의하는 내용 안내</p>
+                            </div>
+                        </div>
+                        <div class="counter">
+                            <p>상담원 안내</p>
+                            <div>
+                                <div class="n1">7</div>
+                                <p>외국어(영어) 상담 / For English Service</p>
+                            </div>
+                            <div>
+                                <div class="n1">0</div>
+                                <p>상담원 연결</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="cs_men">
+                    <div class="men_1">
+                        <h3>실무담당자</h3>
+                    </div>
+                    <div class="men_2">
+                        <p>고객홍보처 주임 김현은</p>
+                    </div>
+                </li>
+            </ul>
             <div class="cs_right">
-                <div class="cs_number"></div>
-                <div class="cs_parking"></div>
+                <div class="cs_number">
+                    <h3>주요 연락처</h3>
+
+                </div>
+                <div class="cs_parking">
+                    <h3>주차장(수서/동탄/평택지제)</h3>
+                    <div class="parking_box">
+                        <p>1522-1841</p>
+                    </div>
+                </div>
             </div>
         </div>
         <footer class="footer"></footer>
